--- a/index.html
+++ b/index.html
@@ -201,5 +201,67 @@
                 </div>
             </div>
         </div>
+        <div class="ourexpert">
+            <div class="container">
+                <div class="row expHeading">
+                    <div class="expimg"></div>
+                    <div class="exptext">
+                        <h1>Our Experts</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut
+                            labore et dolore magna
+                            aliqua. Quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+                        <img src="./Assets/Images/certificate-1.png.webp" alt="#">
+                        <img src="./Assets/Images/certificate-2.png.webp" alt="#">
+                        <img src="./Assets/Images/certificate-3.png.webp" alt="#">
+                    </div>
+        
+                </div>
+            </div>
+            <div class="container">
+                <div class="row teambox">
+                    <div>
+                        <div class="team">
+                            <div class="img">
+                                <img src="./Assets/Images/1exp.webp" alt="#">
+                            </div>
+                            <div class="info">
+                                <h1>Mila Hartley</h1>
+                                <p>Hairdresser</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team">
+                            <div class="img">
+                                <img src="./Assets/Images/2exp.webp" alt="#">
+                            </div>
+                            <div class="info">
+                                <h1>Teigan Duran</h1>
+                                <p>Stylist</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team">
+                            <div class="img"><img src="./Assets/Images/3exp.webp" alt="#"></div>
+                            <div class="info">
+                                <h1>Tanya Ramsay</h1>
+                                <p>Hairstylist</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="team">
+                            <div class="img"><img src="./Assets/Images/4exp.webp" alt="#"></div>
+                            <div class="info">
+                                <h1>Donna Carr</h1>
+                                <p>Baber</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
