--- a/index.html
+++ b/index.html
@@ -263,5 +263,58 @@
                 </div>
             </div>
         </div>
+        <div class="latestNews">
+            <div class="container">
+                <div class="row">
+                    <div class="text-center headnews">
+                        <h1>Latest News</h1>
+                        <span>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.</span>
+                    </div>
+                </div>
+        
+                <div class="row">
+                    <div class="worktext text-center">
+                        <img src="./Assets/Images/3.webp" alt="#">
+                        <h1>Nina Dobrev Got a Major Haircut and Doesn't Look Like Nina Dobrev.</h1>
+                        <p><i class="fa-regular fa-clock"></i>
+                            September 27, 2018 <i class="fa-regular fa-comments"></i> 10 </p>
+                        <span>Most people recognize the CFDA Awards for its slew of perfect gowns and
+                            skin-tight.</span>
+                    </div>
+                    <div class="worktext text-center">
+                        <img src="./Assets/Images/2.jpg.webp" alt="#">
+                        <h1>Finally: How to Make Your Agressively Straight Hair Hold a Curl</h1>
+                        <p><i class="fa-regular fa-clock"></i>
+                            September 27, 2018 <i class="fa-regular fa-comments"></i> 10 </p>
+                        <span>So I sought out an actual professional, i.e. celeb hairstylist Justine
+                            Marjan.</span>
+                    </div>
+                    <div class="worktext text-center">
+                        <img src="./Assets/Images/3.jpg.webp" alt="#">
+                        <h1>Yes, Emilia Clarke Just Cut Off All Her Hair Into a Tiny Bob</h1>
+                        <p><i class="fa-regular fa-clock"></i>
+                            September 27, 2018 <i class="fa-regular fa-comments"></i> 10 </p>
+                        <span>Last night, Clarke appeared on Late Night with Seth Meyers, wearing a charcoal
+                            blazer.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="makeStil">
+            <img src="./Assets/Images/cta.png" alt="#">
+            <div class="container">
+                <div class="row ">
+                    <div>
+                        <h1>Make Stilo Your
+                            Number One Choice</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            la.</p>
+                        <a href="" class="bookbtn">BOOK AN APPOINMENT</a>
+                        <a href="" class="contact">CONTACT US</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
