--- a/index.html
+++ b/index.html
@@ -317,4 +317,27 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <img src="./Assets/Images/logo.webp" alt="#">
+                    <p>We would love to serve you and let you enjoy your culinary experience. Excepteur sint occaecat
+                        cupidatat non proident.</p>
+                    <p>Copyright ©2024 All rights reserved | This template is made with by Colorlib</p>
+                </div>
+                <div>
+                    <h1>Opening times</h1>
+                    <p>Monday: Friday: 10.00 - 23.00</p>
+                    <p>Saturday: 10.00 - 19.00</p>
+                </div>
+                <div>
+                    <h1>Contact Us</h1>
+                    <p>Tel: (+12) 345 678 910</p>
+                    <p>E-mail: Hello.colorlib@gmail.com</p>
+                    <p>Address: Iris Watson, P.O. Box 283 8562 Fusce Rd, NY</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
